--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,2 @@
-APP_PORT = 8080
+APP_PORT = 4000;
+MONGO_URL= mongodb+srv://erhom:facu123@erhom.wtvfy.gcp.mongodb.net/erhom?retryWrites=true&w=majority
